fix: fix state casting